--- a/style.css
+++ b/style.css
@@ -704,7 +704,7 @@ acronym[title] {
     -webkit-transform: translateZ();
     height: auto;
     width: auto;
-    max-width: none;
+    max-width: 200px;
 }
 @media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: .001dpcm) {
     .navbar-brand img {
